# python-maliit

./: CMakeLists.txt  README  enable_pyside_factory.sh  enable_pyside_plugin.sh
examples/: CMakeLists.txt  plainqt.py  twofields.py
examples/plugin/: pymaliit.py
maliit/: CMakeLists.txt  log.txt  typesystem_maliit.xml
maliit/client/: CMakeLists.txt  global.h  typesystem_client.xml
maliit/plugins/: CMakeLists.txt  __init__.py
maliit/plugins/plugins080/: CMakeLists.txt  typesystem_maliit.xml
maliitplugins/: CMakeLists.txt  typesystem_maliit.xml
plugin/: minputmethodpythonfactoryplugin.cpp
plugin-example/: pymaliit.py
